src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>newField1AB__c</fullName>
        <label>newField1AB</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newField1A__c</fullName>
        <label>newField1A</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newField1X__c</fullName>
        <label>newField1X</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newField1__c</fullName>
        <label>newField1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newFieldXXX__c</fullName>
        <label>newFieldXXX</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newFieldZ__c</fullName>
        <label>newFieldZ</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>newField__c</fullName>
        <label>newField</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>